
	* tests/devel/try.c: Tests for {add,sub}lsh*_n_ip[12].
	* tests/refmpn.c: New reference for mpn_{add,sub}lsh*_n_ip[12].
	* tests/tests.h: Declarations for reference functions above.

	* tune/common.c: New speed_mpn_{add,sub}lsh*_n_ip[12] functions.
	* tune/speed.h: Prototypes for functions above.
	* tune/speed.c: Support for mpn_{add,sub}lsh*_n_ip[12].

2011-03-10  Marc Glisse  <marc.glisse@inria.fr>

	* tests/cxx/t-istream.cc: Explicit conversion to streampos.

2011-03-10 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/x86/pentium4/sse2/bdiv_dbm1c.asm: New file, was in atom.
	* mpn/x86/atom/sse2/bdiv_dbm1c.asm: Grab file above.

2011-03-09  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/aorrlsh_n.asm: Complete rewrite.

	* mpn/x86_64/core2/aorrlsh_n.asm: New file, grabbing another asm file.

2011-03-09  Marc Glisse  <marc.glisse@inria.fr>

	* tests/cxx/t-ostream.cc: Use bool instead of int.
	* tests/cxx/t-istream.cc: Likewise.
	* tests/cxx/t-misc.cc: Likewise.

	* cxx/ismpznw.cc: Don't clear eofbit.
	* cxx/ismpq.cc: Likewise.
	* cxx/ismpf.cc: Likewise.
	* tests/cxx/t-istream.cc: Test accordingly.

2011-03-09 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/x86/atom/sse2/bdiv_dbm1c.asm: New file.

2011-03-09  Marc Glisse  <marc.glisse@inria.fr>

	* doc/gmp.texi: Remove void return type from constructors. Document
	explicit constructors. Document mpf_class::mpf_class(mpf_t).

2011-03-07 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/x86/atom/sse2/sqr_basecase.asm: Postponed pushes. Cleaned
	outer loop exit.

2011-03-07  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/gcd_1.asm: Workaround Oracle assembler bug.

	* mpn/x86/atom/sse2/mul_basecase.asm: Replace addmul_1 loops.
	Tweak outer loop rp updates.

2011-03-06  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86/atom/sse2/sqr_basecase.asm: New file.

2011-03-05  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/bdiv_dbm1c.asm: Write proper feed-in code.
